--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,5 +1,11 @@
 footer {
-    background-color: #f5f5f5;
-    padding: 20px;
-    text-align: center;
+  position: fixed;
+  background-color: var(--color-granite);
+  padding: 20px;
+  text-align: center;
   }
+
+.footer_text {
+  text-align: center;
+  color: var(--color-foam);
+}
