--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,10 @@
 header {
-    background-color: #f5f5f5;
-    padding: 20px;
-    text-align: center;
+  position: fixed;
+  top: 0px;
+  background-color: var(--color-water-10);
+  padding: 20px;
   }
+
+h1 {
+  text-align: center;
+}
