--- a/src/components/EntryList/EntryList.css
+++ b/src/components/EntryList/EntryList.css
@@ -1,43 +1,59 @@
 .entry-list {
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    border-color: var(--color-water-10);
-    list-style-type: none;
-    padding: 0;
-  }
-  
-  .entry-list li {
-    margin-bottom: 20px;
-    padding: 10px;
-    background-color: var(--color-water-10);
-    border: 1px solid #ccc;
-    border-radius: 4px;
-  }
-  
-  .entry-title {
-    margin: 0;
-  }
-  
-  .entry-date {
-    font-size: 12px;
-    color: #888;
-    margin-top: 5px;
-  }
-  
-  .entry-text {
-    margin: 10px 0;
-  }
-  
-  .favorite-button {
-    padding: 5px 10px;
-    background-color: #4CAF50;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  
-  .favorite-button:hover {
-    background-color: #45a049;
-  }
+  list-style-type: none;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.entry-list li {
+  position: relative;
+  margin-bottom: 20px;
+  background-color: var(--color-foam);
+  border: 1px solid var(--color-water-10);
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.entry-title {
+  color: var(--color-granite);
+  margin-bottom: 10px;
+}
+
+.entry-date {
+  color: var(--color-granite);
+  margin-bottom: 10px;
+}
+
+.entry-text {
+  color: var(--color-granite);
+  margin-bottom: 10px;
+}
+
+.favorite-button {
+  background-color: var(--color-nemo);
+  color: var(--color-foam);
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+}
+
+.favorite-button:hover {
+  background-color: var(--color-nemo-dark);
+}
+
+.favorite-button:active {
+  background-color: var(--color-nemo-mid);
+}
+
+.entry-icon {
+  position: absolute;
+  top: 0;
+  right:0;
+  width: 24px;
+  height: 24px;
+  fill: var(--color-nemo);
+  margin-right: 10px;
+}
