--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,10 +1,14 @@
 header {
-  position: fixed;
-  top: 0px;
-  background-color: var(--color-water-10);
-  padding: 20px;
-  }
+ width: 100%; 
+background-color: var(--color-water-10);
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 
 h1 {
+  color: var(--color-granite);
   text-align: center;
 }
